apps/manifests/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: dwk-ingress
  annotations:
    traefik.ingress.kubernetes.io/rule-type: "PathPrefixStrip"
spec:
  rules:
  - http:
      paths:
        - path: /
          pathType: Exact
          backend:
            service:
              name: todo-app-frontend-svc
              port:
                number: 5000
        - path: /api
          pathType: Prefix
          backend:
            service:
              name: todo-app-backend-svc
              port:
                number: 5100
        - path: /pingpong
          pathType: Prefix
          backend:
            service:
              name: pingpong-svc
              port:
                number: 5501
        - path: /status
          pathType: Prefix
          backend:
            service:
              name: ticker-svc
              port:
                number: 2345
