apps/manifests/ingress_exercises.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: dwk-exercises-ingress
  namespace: exercises
  annotations:
    traefik.ingress.kubernetes.io/rule-type: "PathPrefixStrip"
spec:
  rules:
    - http:
        paths:
          - path: /pingpong
            pathType: Prefix
            backend:
              service:
                name: pingpong-svc
                port:
                  number: 5501
          - path: /status
            pathType: Prefix
            backend:
              service:
                name: ticker-svc
                port:
                  number: 2345
